Padding added to container to ensure heading is visible.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -29,6 +29,10 @@
   font-size: 1.4em;
  }
 
+.container {
+  margin-top: 10%;
+}
+
 .jumbotron {
   margin-top: 55px;
 }
